# pip-tools

./: .pre-commit-config.yaml  pyproject.toml
